k8s/workloads/mlflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
spec:
  type: NodePort
  selector:
    app: mlflow
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      nodePort: 30500
