k8s/workloads/mlflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow
  namespace: mlflow
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mlflow.robodatalab.com
      secretName: robodatalab-wildcard-tls
  rules:
    - host: mlflow.robodatalab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow
                port:
                  number: 5000
